--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
 RewriteEngine On
 
-RewriteRule ^$ public/index.html [L]
-RewriteRule ^projects$ public/projects.html [L]
+# Redirect semua request ke domain utama
+RewriteCond %{HTTP_HOST} !^akwancakra\.my\.id$ [NC]
+RewriteRule ^(.*)$ https://akwancakra.my.id/$1 [L,R=301]
+
+# (Opsional) Kalau masih mau route lokal tetep jalan di domain itu
+# RewriteRule ^$ public/index.html [L]
+# RewriteRule ^projects$ public/projects.html [L]
